--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "copy-webpack-plugin": "^5.1.1",
     "loader-utils": "^2.0.0",
     "node-html-parser": "^1.2.14",
+    "ts-loader": "^6.2.2",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
     "webpack-merge": "^4.2.2"
-  }
+  },
+  "dependencies": {}
 }
