--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "devserver": "webpack-dev-server --open -d --config webpack/webpack.config.dev.js"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "@wasm-tool/wasm-pack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.2",
     "loader-utils": "^2.0.0",
     "node-html-parser": "^1.2.14",
+    "prettier": "^2.0.3",
     "ts-loader": "^6.2.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3",
