--- a/libs/util/Cargo.toml
+++ b/libs/util/Cargo.toml
@@ -9,11 +9,10 @@ doctest = false
 
 [features]
 default = []
-std = ["tokio", "bytes"]
+std = ["tokio"]
 
 [dependencies]
 cfg-if = { version = "^0.1", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 
-bytes = { version = "^0.5.4", default-features = false, optional = true }
 tokio = { version = "^0.2.11", features = ["fs"], default-features = false, optional = true }
