--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -13,6 +13,7 @@ std = ["crc32fast/std", "tokio", "reqwest/default-tls", "util/std"]
 test_local = ["std"]
 
 [dependencies]
+byteorder = { version = "^1.3", default-features = false }
 zerocopy = { version = "^0.3", default-features = false }
 cfg-if = { version = "^0.1", default-features = false }
 futures = {version = "^0.3", features = ["alloc"], default-features = false }
