--- a/libs/ffxiv_parser/Cargo.toml
+++ b/libs/ffxiv_parser/Cargo.toml
@@ -8,11 +8,12 @@ edition = "2018"
 doctest = false
 
 [dependencies]
+zerocopy = { version = "^0.3", default-features = false }
+byteorder = { version = "^1.3", default-features = false }
 futures = { version = "^0.3", features = ["alloc"], default-features = false }
 bytes = { version = "^0.5.4", default-features = false }
 serde = { version = "^1.0", features = ["derive"], default-features = false }
 serde_repr = { version = "^0.1", default-features = false }
-nom = { version = ">=6.0.0-alpha1", features = ["alloc"], default-features = false }
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 util = { version = "^0.1", default-features = false, path = "../util" }
 
