--- a/libs/ffxiv_renderer/Cargo.toml
+++ b/libs/ffxiv_renderer/Cargo.toml
@@ -12,6 +12,7 @@ doctest = false
 [dependencies]
 raw-window-handle = { version = "^0.3", default-features = false }
 zerocopy = { version = "^0.3", default-features = false }
+shaderc = { version = "^0.6", default-features = false }
 
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
