--- a/libs/ffxiv_renderer/Cargo.toml
+++ b/libs/ffxiv_renderer/Cargo.toml
@@ -14,6 +14,7 @@ raw-window-handle = { version = "^0.3", default-features = false }
 shaderc = { version = "^0.6", default-features = false }
 nalgebra = { version = "^0.21", default-features = false }
 squish = { version = "^1", default-features = false }
+maplit = { version = "^1.0", default-features = false }
 
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
