--- a/libs/ffxiv_model/Cargo.toml
+++ b/libs/ffxiv_model/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ffxiv_renderer"
+name = "ffxiv_model"
 version = "0.1.0"
 authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
@@ -12,7 +12,6 @@ doctest = false
 [dependencies]
 raw-window-handle = { version = "^0.3", default-features = false }
 shaderc = { version = "^0.6", default-features = false }
-nalgebra = { version = "^0.21", default-features = false }
 squish = { version = "^1", default-features = false }
 maplit = { version = "^1.0", default-features = false }
 
