--- a/tools/model_viewer_standalone/Cargo.toml
+++ b/tools/model_viewer_standalone/Cargo.toml
@@ -14,6 +14,8 @@ path = "src/main.rs"
 winit = { version = "^0.22", default-features = false }
 tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
 nalgebra = { version = "^0.21", default-features = false }
+pretty_env_logger = { version = "^0.4", default-features = false }
+log = { version = "^0.4", default-features = false }
 
 ffxiv_model = { version = "^0.1", default-features = false, path = "../../libs/ffxiv_model" }
 sqpack_reader = { version = "^0.1", default-features = false, path = "../../libs/sqpack_reader" }
