--- a/libs/renderer/Cargo.toml
+++ b/libs/renderer/Cargo.toml
@@ -9,6 +9,7 @@ doctest = false
 
 [dependencies]
 futures = { version = "^0.3", features = ["async-await"], default-features = false }
+tokio = { version = "^0.2.11", features = ["sync"], default-features = false }
 wgpu = { version = "^0.5", default-features = false }
 zerocopy = { version = "^0.3", default-features = false }
 nalgebra = { version = "^0.21", default-features = false }
