--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -9,7 +9,7 @@ doctest = false
 
 [features]
 default = []
-std = ["crc32fast/std", "tokio", "reqwest", "util/std"]
+std = ["crc32fast/std", "tokio/fs", "reqwest", "util/std"]
 test_local = ["std"]
 
 [dependencies]
@@ -20,9 +20,9 @@ miniz_oxide = { version = "^0.3", default-features = false }
 log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 bytes = { version = "^0.5.4", default-features = false }
+tokio = { version = "^0.2", features = ["sync"], default-features = false }
 util = { version = "^0.1", default-features = false, path = "../util" }
 
-tokio = { version = "^0.2", features = ["fs", "sync"], default-features = false, optional = true }
 reqwest = { version = "^0.10", features = ["default-tls", "stream"], default-features = false, optional = true }
 
 [dev-dependencies]
