--- a/libs/havok_parser/Cargo.toml
+++ b/libs/havok_parser/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2018"
 doctest = false
 
 [dependencies]
+bitflags = { version = "^1.2", default-features = false }
 log = { version = "^0.4", default-features = false }
+
+util = { version = "^0.1", default-features = false, path = "../util" }
 
 [dev-dependencies]
 tokio = { version = "^0.2", features = ["macros", "rt-threaded", "fs"], default-features = false }
