--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -21,6 +21,8 @@ log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 bytes = { version = "^0.5.4", default-features = false }
 tokio = { version = "^0.2", features = ["sync"], default-features = false }
+hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }
+
 util = { version = "^0.1", default-features = false, path = "../util" }
 
 reqwest = { version = "^0.10", features = ["default-tls", "stream"], default-features = false, optional = true }
