--- a/libs/ffxiv_model/Cargo.toml
+++ b/libs/ffxiv_model/Cargo.toml
@@ -11,9 +11,9 @@ doctest = false
 
 [dependencies]
 raw-window-handle = { version = "^0.3", default-features = false }
-maplit = { version = "^1.0", default-features = false }
 futures = { version = "^0.3", features = ["alloc"], default-features = false }
 tokio = { version = "^0.2", features = ["sync"], default-features = false }
+hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }
 
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
