--- a/libs/havok_parser/Cargo.toml
+++ b/libs/havok_parser/Cargo.toml
@@ -10,6 +10,7 @@ doctest = false
 [dependencies]
 bitflags = { version = "^1.2", default-features = false }
 log = { version = "^0.4", default-features = false }
+hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }
 
 util = { version = "^0.1", default-features = false, path = "../util" }
 
