--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,7 @@ jobs:
     continue-on-error: ${{ matrix.rust == 'nightly' }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: "ubuntu-latest" #[macos-latest, ubuntu-latest, windows-latest]
         rust: [stable, beta, nightly]
 
     steps:
