--- a/libs/util/Cargo.toml
+++ b/libs/util/Cargo.toml
@@ -9,10 +9,10 @@ doctest = false
 
 [features]
 default = []
-std = ["tokio"]
+std = ["async-std"]
 
 [dependencies]
 cfg-if = { version = "^0.1", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 
-tokio = { version = "^0.2", features = ["fs"], default-features = false, optional = true }
+async-std = { version = "^1.6", features = ["default"], default-features = false, optional = true }
