--- a/libs/havok_parser/Cargo.toml
+++ b/libs/havok_parser/Cargo.toml
@@ -15,7 +15,7 @@ hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-fea
 util = { version = "^0.1", default-features = false, path = "../util" }
 
 [dev-dependencies]
-tokio = { version = "^0.2", features = ["macros", "rt-threaded", "fs"], default-features = false }
+async-std = { version = "^1.6", features = ["attributes"], default-features = false }
 pretty_env_logger = { version = "^0.4", default-features = false }
 
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
