Port to async_std

--- a/tools/model_viewer_standalone/Cargo.toml
+++ b/tools/model_viewer_standalone/Cargo.toml
@@ -12,7 +12,8 @@ path = "src/main.rs"
 
 [dependencies]
 winit = { version = "^0.22", default-features = false }
-tokio = { version = "^0.2", features = ["macros", "rt-threaded", "fs", "time"], default-features = false }
+async-std = { version = "^1.6", features = ["attributes"], default-features = false }
+futures = {version = "^0.3", features = ["default"], default-features = false }
 nalgebra = { version = "^0.21", default-features = false }
 pretty_env_logger = { version = "^0.4", default-features = false }
 log = { version = "^0.4", default-features = false }
