--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -9,7 +9,7 @@ doctest = false
 
 [features]
 default = []
-std = ["crc32fast/std", "async-std/default", "surf", "util/std"]
+std = ["crc32fast/std", "async-std", "surf", "util/std"]
 test_local = ["std"]
 
 [dependencies]
@@ -20,13 +20,13 @@ miniz_oxide = { version = "^0.3", default-features = false }
 log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 bytes = { version = "^0.5.4", default-features = false }
-async-std = { version = "^1.6", features = ["alloc"], default-features = false }
 hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }
 
 util = { version = "^0.1", default-features = false, path = "../util" }
 
-surf = { version = "^2.0.0-alpha.4", features = ["native-client"], default-features = false, optional = true }
+async-std = { version = "^1.6", optional = true }
+surf = { version = "^2.0.0-alpha.4", optional = true }
 
 [dev-dependencies]
 pretty_env_logger = { version = "^0.4", default-features = false }
-async-std = { version = "^1.6", features = ["attributes"], default-features = false }
+async-std = { version = "^1.6", features = ["attributes", "alloc"], default-features = false }
