use std instead of default

--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -14,7 +14,7 @@ test_local = ["std"]
 
 [dependencies]
 cfg-if = { version = "^0.1", default-features = false }
-futures = {version = "^0.3", features = ["default"], default-features = false }
+futures = {version = "^0.3", features = ["std"], default-features = false }
 crc32fast = { version = "^1.2.0", default-features = false }
 miniz_oxide = { version = "^0.3", default-features = false }
 log = { version = "^0.4", default-features = false }
