--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -14,13 +14,14 @@ test_local = ["std"]
 
 [dependencies]
 cfg-if = { version = "^0.1", default-features = false }
-futures = {version = "^0.3", features = ["std"], default-features = false }
+futures = {version = "^0.3", features = ["alloc"], default-features = false }
 crc32fast = { version = "^1.2.0", default-features = false }
 miniz_oxide = { version = "^0.3", default-features = false }
 log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 bytes = { version = "^0.5.4", default-features = false }
 hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }
+spin = { version = "^0.5", default-features = false }
 
 util = { version = "^0.1", default-features = false, path = "../util" }
 
