--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -21,7 +21,7 @@ log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 bytes = { version = "^0.5.4", default-features = false }
 hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }
-spin = { version = "^0.5", default-features = false }
+spinning_top = { version = "^0.1", default-features = false }
 
 util = { version = "^0.1", default-features = false, path = "../util" }
 
