--- a/libs/ffxiv_model/Cargo.toml
+++ b/libs/ffxiv_model/Cargo.toml
@@ -13,6 +13,7 @@ doctest = false
 raw-window-handle = { version = "^0.3", default-features = false }
 futures = { version = "^0.3", features = ["alloc"], default-features = false }
 hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }
+spinning_top = { version = "^0.1", default-features = false }
 
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
