--- a/tools/sqpack_extractor/Cargo.toml
+++ b/tools/sqpack_extractor/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2018"
 [dependencies]
 futures = { version = "^0.3", features = ["alloc"], default-features = false }
 clap = { version = "^2.33", default-features = false }
-async-std = { version = "^1.6", features = ["attributes"], default-features = false }
+async-std = { version = "^1.6", features = ["default", "attributes"], default-features = false }
 sqpack_reader = { version = "^0.1", features = ["std"], default-features = false, path = "../../libs/sqpack_reader" }
