--- a/libs/ffxiv_parser/Cargo.toml
+++ b/libs/ffxiv_parser/Cargo.toml
@@ -15,6 +15,8 @@ test = ["sqpack_reader/std"]
 futures = { version = "^0.3", features = ["alloc"], default-features = false }
 serde = { version = "^1.0", features = ["derive", "alloc"], default-features = false }
 serde_repr = { version = "^0.1", default-features = false }
+phf = { version = "^0.8", features = ["macros"], default-features = false }
+
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 util = { version = "^0.1", default-features = false, path = "../util" }
 
