Implement download for wasm

--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -9,7 +9,7 @@ doctest = false
 
 [features]
 default = []
-std = ["crc32fast/std", "async-std", "reqwest", "util/std"]
+std = ["crc32fast/std", "async-std", "util/std"]
 test_local = ["std"]
 
 [dependencies]
@@ -26,8 +26,16 @@ spinning_top = { version = "^0.1", default-features = false }
 util = { version = "^0.1", default-features = false, path = "../util" }
 
 async-std = { version = "^1.6", optional = true }
-reqwest = { version = "^0.10", features = ["default-tls", "stream"], default-features = false, optional = true }
 
 [dev-dependencies]
 pretty_env_logger = { version = "^0.4", default-features = false }
 async-std = { version = "^1.6", features = ["attributes", "alloc"], default-features = false }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+reqwest = { version = "^0.10", features = ["default-tls", "stream"], default-features = false }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = { version = "^0.3" }
+wasm-bindgen = { version = "^0.2" }
+wasm-bindgen-futures = { version = "^0.4" }
+web-sys = { version = "^0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
