--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ members = [
     "libs/havok_parser",
     "tools/sqpack_extractor",
     "tools/model_viewer_standalone",
+    "web/model_viewer",
+    "web/translation_compare",
     "server",
 ]
 
