--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,13 @@
+#syntax=docker/dockerfile:experimental
+
 FROM rust:stretch as builder
 
-RUN apt-get update
-RUN apt-get install cmake -y
+RUN apt-get update && apt-get install cmake -y
 
 WORKDIR /src
 COPY . .
 
-RUN cargo install --path server --locked --bins --root build
+RUN --mount=type=cache,target=/src/target cargo install --path server --locked --bins --root build
 
 FROM debian:stretch-slim
 COPY --from=builder /src/build/bin /server
