Give up caching docker mount cache

--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -2,6 +2,8 @@ on:
   push:
     branches:
       - master
+    paths:
+      - "server/**"
 
 name: Server deploy
 
@@ -24,13 +26,6 @@ jobs:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: ${{ runner.os }}-buildx-
-
-      - name: Cache Docker lib
-        uses: actions/cache@v2
-        with:
-          path: /var/lib/docker
-          key: ${{ runner.os }}-buildx-docker-${{ github.sha }}
-          restore-keys: ${{ runner.os }}-buildx-docker-
 
       - name: Docker Login
         env:
