--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
     "libs/sqpack_reader",
-    "libs/ffxiv_exd",
+    "libs/ffxiv_ex",
     "libs/ffxiv_parser",
     "libs/ffxiv_model",
     "libs/renderer",
