--- a/libs/ffxiv_parser/Cargo.toml
+++ b/libs/ffxiv_parser/Cargo.toml
@@ -18,6 +18,7 @@ serde_repr = { version = "^0.1", default-features = false }
 hashbrown = { version = "^0.8", features = ["ahash", "inline-more"], default-features = false }
 phf = { version = "^0.8", features = ["macros"], default-features = false }
 log = { version = "^0.4", default-features = false }
+nalgebra = { version = "^0.21", default-features = false }
 
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 util = { version = "^0.1", default-features = false, path = "../util" }
