--- a/package.json
+++ b/package.json
@@ -28,5 +28,7 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "wasm-pack": "^0.9.1"
+  }
 }
