--- a/tools/model_viewer_standalone/Cargo.toml
+++ b/tools/model_viewer_standalone/Cargo.toml
@@ -18,4 +18,4 @@ once_cell = { version = "^1.4", features = ["std"], default-features = false }
 
 ffxiv_model = { version = "^0.1", default-features = false, path = "../../libs/ffxiv_model" }
 sqpack_reader = { version = "^0.1", features = ["std"], default-features = false, path = "../../libs/sqpack_reader" }
-renderer = { version = "^0.1", default-features = false, path = "../../libs/renderer" }
+renderer = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/renderer" }
