Extract sqpack_reader into a package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-    "libs/sqpack_reader",
+    "libs/sqpack_extension",
     "libs/ffxiv_ex",
     "libs/ffxiv_parser",
     "libs/ffxiv_model",
