--- a/libs/ffxiv_parser/Cargo.toml
+++ b/libs/ffxiv_parser/Cargo.toml
@@ -9,7 +9,7 @@ doctest = false
 
 [features]
 # test feature is workaround for cargo unifying feature in dev-dependency and dependency. (https://github.com/rust-lang/cargo/issues/7916)
-test = ["sqpack_reader/std"]
+test = ["sqpack/std"]
 
 [dependencies]
 futures = { version = "^0.3", features = ["alloc"], default-features = false }
@@ -20,10 +20,11 @@ phf = { version = "^0.8", features = ["macros"], default-features = false }
 log = { version = "^0.4", default-features = false }
 nalgebra = { version = "^0.22", default-features = false }
 
-sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
+sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
 util = { version = "^0.1", default-features = false, path = "../util" }
 
 [dev-dependencies]
 async-std = { version = "^1.6", features = ["attributes", "tokio02"] }
 pretty_env_logger = { version = "^0.4", default-features = false }
 log = { version = "^0.4", default-features = false }
+sqpack_extension = { version = "^0.1", default-features = false, path = "../sqpack_extension" }
