--- a/libs/havok_parser/Cargo.toml
+++ b/libs/havok_parser/Cargo.toml
@@ -18,5 +18,6 @@ util = { version = "^0.1", default-features = false, path = "../util" }
 async-std = { version = "^1.6", features = ["attributes"], default-features = false }
 pretty_env_logger = { version = "^0.4", default-features = false }
 
+sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
-sqpack_reader = { version = "^0.1", features = ["std"], default-features = false, path = "../sqpack_reader"  }
+sqpack_extension = { version = "^0.1", default-features = false, path = "../sqpack_extension" }
