--- a/libs/sqpack_extension/Cargo.toml
+++ b/libs/sqpack_extension/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sqpack_reader"
+name = "sqpack_extension"
 version = "0.1.0"
 authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
@@ -9,20 +9,18 @@ doctest = false
 
 [features]
 default = []
-std = ["crc32fast/std", "async-std", "util/std"]
-test_local = ["std"]
+std = ["sqpack/std", "async-std"]
 
 [dependencies]
 cfg-if = { version = "^0.1", default-features = false }
 futures = {version = "^0.3", features = ["alloc"], default-features = false }
-crc32fast = { version = "^1.2.0", default-features = false }
-miniz_oxide = { version = "^0.4", default-features = false }
 log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 bytes = { version = "^0.5.4", default-features = false }
 hashbrown = { version = "^0.8", features = ["ahash", "inline-more"], default-features = false }
 spinning_top = { version = "^0.2", default-features = false }
 
+sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
 util = { version = "^0.1", default-features = false, path = "../util" }
 
 async-std = { version = "^1.6", optional = true }
