--- a/tools/model_viewer_standalone/Cargo.toml
+++ b/tools/model_viewer_standalone/Cargo.toml
@@ -16,6 +16,7 @@ log = { version = "^0.4", default-features = false }
 hashbrown = { version = "^0.8", features = ["ahash", "inline-more"], default-features = false }
 once_cell = { version = "^1.4", features = ["std"], default-features = false }
 
-ffxiv_model = { version = "^0.1", default-features = false, path = "../../libs/ffxiv_model" }
-sqpack_reader = { version = "^0.1", features = ["std"], default-features = false, path = "../../libs/sqpack_reader" }
 renderer = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/renderer" }
+sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
+sqpack_extension = { version = "^0.1", path = "../../libs/sqpack_extension" }
+ffxiv_model = { version = "^0.1", default-features = false, path = "../../libs/ffxiv_model" }
