--- a/web/translation_compare/Cargo.toml
+++ b/web/translation_compare/Cargo.toml
@@ -20,7 +20,7 @@ console_error_panic_hook = { version = "^0.1", default-features = false }
 console_log = { version = "0.2", features = ["color"], default-features = false }
 log = { version = "0.4", default-features = false }
 
-sqpack_reader = { version = "^0.1", path = "../../libs/sqpack_reader" }
+sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
 web_common = { version = "^0.1", path = "../web_common" }
 ffxiv_parser = { version = "^0.1", path = "../../libs/ffxiv_parser" }
 ffxiv_ex = { version = "^0.1", path = "../../libs/ffxiv_ex" }
