--- a/web/web_common/Cargo.toml
+++ b/web/web_common/Cargo.toml
@@ -14,5 +14,6 @@ async-trait = { version = "^0.1.24", default-features = false }
 wasm-bindgen-futures = { version = "^0.4", default-features = false }
 wasm-timer = { version = "^0.2", default-features = false }
 
-sqpack_reader = { version = "^0.1", path = "../../libs/sqpack_reader" }
+sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
+sqpack_extension = { version = "^0.1", path = "../../libs/sqpack_extension" }
 ffxiv_parser = { version = "^0.1", path = "../../libs/ffxiv_parser" }
