--- a/.github/workflows/deploy_server.yaml
+++ b/.github/workflows/deploy_server.yaml
@@ -2,8 +2,6 @@ on:
   push:
     branches:
       - master
-    paths:
-      - "server/**"
 
 name: Server deploy
 
@@ -33,11 +31,7 @@ jobs:
           restore-keys: ${{ runner.os }}-buildx-
 
       - name: Docker Login
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo "${DOCKER_PASSWORD}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
+        run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
       - name: Docker Build
         run: |
@@ -46,7 +40,7 @@ jobs:
             --cache-to "type=local,dest=/tmp/.buildx-cache,mode=max" \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             --push \
-            --tag dlunch/ffxivtools_server:latest \
+            --tag ghcr.io/dlunch/ffxivtools_server:latest \
             --file ./server/Dockerfile .
 
       - name: Clear
