--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "name": "ffxiv-tools",
   "version": "0.1.0",
   "scripts": {
+    "build:app": "webpack --config webpack/webpack.config.app.js",
+    "app": "electron app/dist",
     "build:dev": "webpack --config webpack/webpack.config.dev.js",
     "build:prod": "webpack --config webpack/webpack.config.prod.js",
     "devserver": "webpack-dev-server --open -d --config webpack/webpack.config.dev.js"
   },
-  "devDependencies": {
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
+    "electron": "^10.1.5",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
