--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "downlevelIteration": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "baseUrl": "./web"
+    "baseUrl": "."
   }
 }
